--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,8 @@
 <div id="<%= dom_id(comment) %>">
+  <p>
+    <strong>Commenter:</strong>
+    <%= comment.user.email %>
+  </p>
   <%= comment.content %>
   <%= button_to "Destroy this comment", [comment.post, comment], method: :delete %>
 </div>
