--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,9 +4,9 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <% if @user.present?%>
-      <cite>Author: <%= post.user.email %></cite>
-    <% end %>
+    <%# if @user.present?%>
+      <cite>Author: <%= post.user.name %></cite>
+    <%# end %>
     <%= render post %>
     <% if user_signed_in? %>
       <p>
@@ -15,5 +15,7 @@
     <% end %>
   <% end %>
 </div>
+
+
 
 <%== pagy_nav(@pagy) %>
