--- a/app/views/posts/_comments.html.erb
+++ b/app/views/posts/_comments.html.erb
@@ -1,7 +1,7 @@
 <h2>Comments</h2>
 
 <div id="comments">
-  <%= render @post.comments %>
+  <%= render @post.comments.includes(:user) %>
 </div>
 
 <%= render "comments/new"%>
