--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,11 @@
  *= require_tree .
  *= require_self
  */
+nav {
+  display: flex;
+  justify-content: space-between
+}
+
+.navbar {
+  list-style-type: none
+}
