--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
   </head>
 
   <nav>
-    <ul>
+    <ul class="navbar">
       <li><%= link_to "Home", root_path%></li>
       <% if user_signed_in? %>
         <li><%= link_to "New post", new_post_path %></li>
@@ -23,6 +23,7 @@
       <li><%= link_to "Sign in",  user_session_path %></li>
       <% end %>
     </ul>
+    <%= render 'search/form' %>
   </nav>
   <body>
     <%= yield %>
