--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,7 +2,7 @@
 
 <p style="color: green"><%= notice %></p>
 
-<cite>Author: <%= @post.user.name %></cite>
+<cite>Author: <%= link_to @post.user.name, user_path %></cite>
 
 <%= render @post %>
 
