--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,25 +6,18 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
 
-  <nav>
-    <ul class="navbar">
-      <li><%= link_to "Home", root_path%></li>
-      <% if user_signed_in? %>
-        <li><%= link_to "New post", new_post_path %></li>
-        <li><%= link_to "Edit Profile", edit_user_registration_path %></li>
-        <li><%= link_to "Sign out", destroy_user_session_path, 'data-turbo-method': :delete %></li>
-      <% else %>  
-      <li><%= link_to "Sign up", new_user_registration_path %></li>
-      <li><%= link_to "Sign in",  user_session_path %></li>
-      <% end %>
-    </ul>
-    <%= render 'search/form' %>
-  </nav>
   <body>
-    <%= yield %>
+    <%= render partial: "shared/navbar" %>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
+
 </html>
