--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,14 +1,9 @@
-<div id="<%= dom_id post %>">
-  <p>
-    <strong>Title:</strong>
-    <%= post.title %>
-  </p>
-  <p>
-    <strong>Content:</strong>
-    <%= post.content %>
-  </p>
-  <p>
-    <strong><%= pluralize post.comments.count, "comment" %></strong>
-  </p>
-
+<div class="card w-100">
+  <div class="card-body">
+    <div id="<%= dom_id post %>">
+      <h4 class="card-title"><%= post.title %></h4>
+      <p class="card-text"><%= post.content %></p>
+      <p class="card-text"><small class="text-muted"><%= pluralize post.comments.count, "comment" %></small></p>
+    </div>
+  </div>
 </div>
